Add API to return configuration
